[GNYR09F] Adjacent Bit Pairs

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>1.0.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>3.0</version>
+        </dependency>
+
 
     </dependencies>
 </project>
